feat: complete v2 operations and runtime surfaces