@@ -1,13 +1,15 @@
 package com.smile.aceeconomy.domain;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
 /**
  * Immutable registry of known currencies, keyed by normalized id.
  *
- * <p>Constructors require exactly one currency to be marked as default.</p>
+ * <p>Constructors require exactly one currency to be marked as default. Insertion order is
+ * preserved so config-declared currency order drives stable completion and listing output.</p>
  */
 public final class CurrencyRegistry {
 
@@ -15,7 +17,9 @@ public final class CurrencyRegistry {
     private final String defaultCurrencyId;
 
     private CurrencyRegistry(Map<String, Currency> currencies, String defaultCurrencyId) {
-        this.byNormalizedId = Map.copyOf(currencies);
+        // Keep the caller's insertion order (unlike Map.copyOf, which discards it) so
+        // known-currency listings stay deterministic for a given config declaration order.
+        this.byNormalizedId = Collections.unmodifiableMap(new LinkedHashMap<>(currencies));
         this.defaultCurrencyId = defaultCurrencyId;
     }
 
@@ -26,7 +30,11 @@ public final class CurrencyRegistry {
         Map<String, Currency> map = new LinkedHashMap<>();
         String def = null;
         for (Currency c : currencies) {
-            map.put(c.id(), c);
+            // Ids are already normalized by Currency.define; a plain put would silently
+            // overwrite a same-normalized-id entry, so duplicates are rejected explicitly.
+            if (map.put(c.id(), c) != null) {
+                throw new IllegalArgumentException("duplicate normalized currency id: " + c.id());
+            }
             if (c.isDefault()) {
                 if (def != null) {
                     throw new IllegalArgumentException("exactly one default currency is required");
